# Ailurus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO-Phase2-Foundation.md  TODO-Phase5-BrightScene.md  TODO-Phase6-AdvancedRendering.md
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-multi-platform.yml  cmake-windows.yml
Backup/: TODO-Phase3-Rendering.md  TODO-Phase4-ImGuiUI.md
Backup/example/Basic/: CMakeLists.txt  ExampleCmdLine.cpp  ExampleConsole.cpp  ExampleProcess.cpp  ExampleSystem.cpp
Backup/example/Network/: ExampleDNS.cpp  ExampleTcpMultiEchoSever.cpp
Backup/test/Memory/: TestFreeListAllocator.cpp  TestLinearAllocator.cpp  TestMemoryAllocatorUtil.cpp  TestPoolAllocator.cpp  TestStackAllocator.cpp
doc/: renderer-architecture.md
editor/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo
editor/src/: App.tsx  app.css  main.tsx
example/: CMakeLists.txt  ExampleCmdLine.cpp  ExampleProcess.cpp
example/ExternalEditor/: CMakeLists.txt  Main.cpp
example/Graphics/: CMakeLists.txt  Info.plist.in  Main.cpp
example/Graphics/Assets/Material/: DefaultMaterial.json  PBRMaterial.json  TransparentMaterial.json
example/Graphics/Assets/Material/Primitive/: DefaultMaterial.json
example/Graphics/Assets/Model/: Cube.fbx
example/Graphics/Assets/Shader/: deferred_lighting.frag  deferred_lighting.vert  gbuffer.frag  gbuffer.vert  ibl_brdf_lut.frag  ibl_irradiance.frag  ibl_prefilter.frag  pbr.frag  pbr.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  transparent.frag  transparent.vert  triangle.frag  triangle.vert
example/Graphics/Assets/Shader/PostProcess/: bloom_composite.frag  bloom_downsample.frag  bloom_kawase_down.frag  bloom_kawase_up.frag  bloom_threshold.frag  bloom_upsample.frag  deferred_lighting.frag  fullscreen.vert  ssao_blur.frag  ssao_composite.frag  ssao_generate.frag  tonemapping.frag
example/Graphics/Assets/ShaderBin/: triangle.frag.spv  triangle.vert.spv
example/Graphics/Scripts/: assets_copy.py  fix_icd_paths.py  shader_gen.py
example/Graphics/Scripts/tools/miscs/: path_miscs.py
example/Network/: CMakeLists.txt  ExampleSimpleTcpSender.cpp  ExampleTcpMultiEchoSever.cpp  ExampleTcpSingleEchoSever.cpp  ExampleTcpSocketReceive.cpp  ExampleTcpSocketSend.cpp
example/Window/: CMakeLists.txt  ExampleImGuiOpenGL.cpp  ExampleInputCallback.cpp  ExampleMessageReceived.cpp  ExampleWindowCallback.cpp  ExampleWindowCreate.cpp  ExampleWindowImGui.cpp  ExampleWindowVulkanTriangle.cpp  TestImGuiOpenGL.cpp  TestInputCallback.cpp
include/Ailurus/: Application.h  Assert.h  PlatformDefine.h
include/Ailurus/Container/: LinkedListLockFreeQueue.hpp  LockFreeQueue.hpp  RingBufferLockFreeQueue.hpp  SegmentArray.hpp
include/Ailurus/ExternalEditor/: ExternalEditorBridge.h
include/Ailurus/Graphics/: Image.h  Renderer.h
include/Ailurus/Math/: AABB.hpp  Frustum.hpp  Math.hpp  Math.inl  Matrix2x2.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Random.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/Ailurus/Memory/: PoolAllocator.hpp
include/Ailurus/Network/: EndPoint.h  Network.h  SocketState.h  TcpSocket.h
include/Ailurus/OS/: Path.h  System.h
include/Ailurus/Renderer/: Renderer.h
include/Ailurus/System/: Memory.h  Process.h
include/Ailurus/Utility/: Color.h  CommandLine.h  EnumReflection.h  File.h  Image.h  LockFreeQueue.hpp  Logger.h  SpinPause.h  String.h  ThreadPool.hpp  Timer.h
include/Ailurus/Window/: InputEnum.h  Window.h  WindowStyle.h
include/Core/Ailurus/: PlatformDefine.h
scripts/: shader_gen.py
scripts/tools/miscs/: log.py
src/: Application.cpp  CommandLine.cpp  Logger.cpp  String.cpp
src/App/: Application.Graphics.cpp  Application.cpp  SDLMain.cpp
src/App/Application/: Window.cpp
src/App/Assets/: AssetsManager.cpp  Mesh.cpp  VertexAttributeDescription.cpp
src/App/AssetsSystem/: AssetsSystem.Material.cpp  AssetsSystem.Model.cpp  AssetsSystem.cpp  Mesh.cpp  VertexAttributeDescription.cpp
src/App/Component/: BaseComponent.cpp  CompMeshRender.cpp
src/App/Entity/: Entity.cpp
src/App/ImGuiSystem/: ImGui.cpp
src/App/Input/: InputEnum.cpp  InputManager.cpp
src/App/InputSystem/: InputSystem.cpp
src/App/Manager/: RenderManager.cpp
src/App/Material/: Material.cpp
src/App/Render/: InputAssemble.cpp  InputAssemble.h  InputAttribute.cpp  MeshRender.cpp  MeshRenderImpl.cpp  MeshRenderImpl.h  Render.h  RenderManager.cpp  RenderManager.h  Renderer.cpp  VertexAttributeDescription.cpp
src/App/RenderPass/: RenderPass.cpp
src/App/RenderSystem/: RenderSystem.Render.cpp  RenderSystem.cpp
src/App/Rhi/: RhiContext.cpp  RhiContext.h
src/App/Scene/: SceneManager.cpp
src/App/SceneSystem/: SceneSystem.cpp
src/App/Shader/: Shader.cpp  ShaderLibrary.cpp  ShaderLibrary.h  (+3 more)
src/ExternalEditor/: ExternalEditorBridge.cpp
src/Graphics/: Color.cpp  Image.cpp  Renderer.cpp
src/Network/: EndPoint.cpp  Network.cpp  SocketState.cpp  TcpSocket.cpp
src/Renderer/: Renderer.cpp
src/Utility/: File.cpp  Image.cpp  Logger.cpp  SpinPause.cpp  String.cpp
src/VulkanContext/: VulkanContext.cpp  VulkanContext.h  VulkanFunctionLoader.cpp  VulkanFunctionLoader.h
src/Window/: InputEnum.cpp  Window.cpp
submodule/: CMakeLists.txt
test/: CMakeLists.txt  TestCommandLine.cpp  TestConsole.cpp  TestEnumReflection.cpp  TestLockFreeQueue.cpp  TestMatrix.cpp  TestProcess.cpp  TestQuaternion.cpp  TestString.cpp  TestSystem.cpp  TestThreadPool.cpp  TestVector.cpp
test/Container/: TestLockFreeQueue.cpp  TestSegmentArray.cpp
test/Graphics/: TestCamera.cpp  TestUniformStd140.cpp
test/Math/: MathHelper.hpp  TestEulerAngle.cpp  TestMath.cpp  TestMatrix.cpp  TestMatrix2x2.cpp  TestMatrix3x3.cpp  TestMatrix4x4.cpp  TestQuaternion.cpp  TestVector.cpp  TestVector2.cpp  TestVector3.cpp  TestVector4.cpp
test/Memory/: TestFreeListAllocator.cpp  TestLinearAllocator.cpp  TestMemoryAllocatorUtil.cpp  TestPoolAllocator.cpp  TestStackAllocator.cpp  TestTLSFAllocator.cpp
test/Network/: TestDNS.cpp  TestTcpSocketReceive.cpp  TestTcpSocketSend.cpp
(+836 files in other folders)
