function(create_ailurus_test test_name source_file)
    add_executable          (${test_name} ${source_file})
    target_link_libraries   (${test_name} PUBLIC ailurus doctest glm)
    add_test                (NAME ${test_name} COMMAND ${test_name})
endfunction()

create_ailurus_test (ailurus_test_math_vector2             Math/TestVector2.cpp)
create_ailurus_test (ailurus_test_math_vector3             Math/TestVector3.cpp)
create_ailurus_test (ailurus_test_math_vector4             Math/TestVector4.cpp)
create_ailurus_test (ailurus_test_math_matrix2x2           Math/TestMatrix2x2.cpp)
create_ailurus_test (ailurus_test_math_matrix3x3           Math/TestMatrix3x3.cpp)
create_ailurus_test (ailurus_test_math_matrix4x4           Math/TestMatrix4x4.cpp)
create_ailurus_test (ailurus_test_math_quaternion          Math/TestQuaternion.cpp)
create_ailurus_test (ailurus_test_math_euler_angle         Math/TestEulerAngle.cpp)
create_ailurus_test (ailurus_test_math                     Math/TestMath.cpp)
create_ailurus_test (ailurus_test_string                   TestString.cpp)
create_ailurus_test (ailurus_test_enum_reflection          TestEnumReflection.cpp)

create_ailurus_test (ailurus_test_uniform_std140           Graphics/TestUniformStd140.cpp)
create_ailurus_test (ailurus_test_camera_projection        Graphics/TestCamera.cpp)
